--- a/index.html
+++ b/index.html
@@ -220,16 +220,72 @@
         <div class="container-fluid">
             <h1 class="mx-5 text-left text-uppercase heads mb-3">Projects</h1>
             <div class="container sections my-1 pt-3">
-                <img class="featured-image" src="img/HS_pic2.JPG">
+                <img class="featured-image-HS1" src="img/HS_pic2.JPG">
                 <div class="w-100 project-overlay container">
-                    <div class="w-100 ">
+                    <div class="w-100">
                         <p class="m-1 mx-1">
+                            <a class="repo-button" href="https://github.com/Akshantjain/Home-Security-System/tree/master/code" target="_blank">CODE</a>
                             <span class="titles">Home Security System</span> <br>
                             <span class="duration text-weight-bold">August - December 2019</span>
+                            
                         </p>
-                        <p class="project-description">
-
-                        </p>
+                        <div class="project-description text-justify">
+                            <ul>
+                                <li>
+                                    This project ia a part of <em>Computer Design Course</em> (CS 362) of UIC from <em>Fall 2019</em> Semester.
+                                </li>
+                                <li>
+                                    This was a group project of three members.
+                                </li>
+                                <li>
+                                    The main idea of the project was to design and create a prototype of home security system.
+                                </li>
+                                <li>
+                                    The system is able to detect many threats which could take place in a house in your absence.
+                                </li>
+                                <li>
+                                    The potential threats which system could detect include theft, invade, smoke, fire, gas and lights.
+                                </li>
+                                <li>
+                                    The system is protected by a password which is you need to set every time you enable the system.
+                                </li>
+                                <li>
+                                    The security system is coded in C++ on Arduino and hardwares.
+                                </li>
+                            </ul>
+                            <div>
+                                <div class="mb-4 ml-4">
+                                    <p class="m-0 mb-1 p-0">Hardware and Concepts used:</p>
+                                    <div class="horizontal-scroll">
+                                        <a href="javascript:void(0)">3 Arduinos</a>
+                                        <a href="javascript:void(0)">I2C Communication</a>
+                                        <a href="javascript:void(0)">3 BreadBoards</a>
+                                        <a href="javascript:void(0)">1 Mini BreadBoard</a>
+                                        <a href="javascript:void(0)">3 Batteries</a>
+                                        <a href="javascript:void(0)">3 LCD Display</a>
+                                        <a href="javascript:void(0)">4 LED Lights</a>
+                                        <a href="javascript:void(0)">1 Photoresistor</a>
+                                        <a href="javascript:void(0)">1 Potentiometer</a>
+                                        <a href="javascript:void(0)">2 Pin Buttons</a>
+                                        <a href="javascript:void(0)">Ultrasonic Sensor</a>
+                                        <a href="javascript:void(0)">4x4 Numpad</a>
+                                        <a href="javascript:void(0)">Smoke Sensor</a>
+                                        <a href="javascript:void(0)">3 Buzzers</a>
+                                        <a href="javascript:void(0)">Connecting Wires</a>
+                                        <a href="javascript:void(0)">8 Resistors</a>
+                                    </div>
+                                </div>
+                                <div class="mb-4 ml-4">
+                                    <p class="m-0 mb-1 p-0">Project Documents:</p>
+                                    <div class="horizontal-scroll">
+                                        <a href="http://bit.ly/2SZ3C83" target="_blank">Initial Team and Idea</a>
+                                        <a href="http://bit.ly/3c8AoeG" target="_blank">Team and Project Contract</a>
+                                        <a href="http://bit.ly/2wIGSAxG" target="_blank">Updated Design Document</a>
+                                        <a href="http://bit.ly/2SY0FEQ" target="_blank">Project Presentation</a>
+                                        <a href="http://bit.ly/2PrJo4V" target="_blank">Final Design Document</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -271,7 +327,7 @@
                             <h4 class="text-uppercase m-0">GitHub</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">
-                               <a href="#">github.com/Akshantjain</a>
+                               <a href="https://github.com/Akshantjain">github.com/Akshantjain</a>
                             </div>
                         </div>
                     </div>
@@ -305,7 +361,7 @@
                             <h4 class="text-uppercase mt-1">Gmail</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">
-                                <a href="#">akshant.jain2@gmail.com</a>
+                                <a href="mailto:akshant.jain2@gmail.com">akshant.jain2@gmail.com</a>
                             </div>
                         </div>
                     </div>
@@ -318,7 +374,7 @@
                             <h4 class="text-uppercase m-0">LinkedIn</h4>
                             <hr class="my-4">
                             <div class="small text-black-50">
-                                <a href="#">linkedin.com/in/akshantjain/</a>
+                                <a href="linkedin.com/in/akshantjain/">linkedin.com/in/akshantjain/</a>
                             </div>
                         </div>
                     </div>
@@ -368,8 +424,8 @@
     <!-- Footer -->
     <footer class="bg-black small text-center contents text-white-50" style="padding-top: 30px;">
         <div class="container">
-            Re-Designed by Akshant Jain <br>
-            Copyright &copy; Akshant Jain 2020
+            <a class="text-white-50" href="http://bit.ly/2VmnVhn" target="_blank">Re-Designed by Akshant Jain <br>
+            Copyright &copy; Akshant Jain 2020</a>
         </div>
     </footer>
 
@@ -397,6 +453,7 @@
     <script src="js/script.js"></script>
 
     <script>
+
         $(window).on("load", function name() {
 
             setTimeout(() => { 
